<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/new_event"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/subjects_menu_new_event"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/add"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/subjects_menu_add"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/subjects_menu_edit"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/subjects_menu_delete"
        app:showAsAction="always"
        android:visible="false"
        />

    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/subjects_menu_save"
        app:showAsAction="always"
        android:visible="false"
        />

</menu>
